# evilcrow-rf-tui

./: .gitignore  INSTALL_ARCH.md  PKGBUILD  PKGBUILD-git  PKGBUILD.local  README.md  install-local.sh  install.sh  uninstall.sh
firmware/: platformio.ini
firmware/src/: cc1101_driver.cpp  config.h  main.cpp  rf_operations.cpp  rf_operations.h  serial_protocol.cpp  serial_protocol.h
scripts/: flash_firmware.sh  test_jammer.py  test_rx.py  test_scanner.py  test_serial.py  test_tui.sh  test_tx.py
tui/: pyproject.toml
tui/src/evilcrow_tui/: __init__.py  __main__.py  app.py  serial_client.py  signal_formats.py  storage.py
tui/src/evilcrow_tui/screens/: __init__.py  jammer_screen.py  record_screen.py  transmit_screen.py
tui/src/evilcrow_tui/widgets/: __init__.py
