[project]
name = "evilcrow-tui"
version = "2.0.0"
description = "TUI (Text User Interface) for Evil Crow RF V2"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Evil Crow RF TUI Project"}
]
dependencies = [
    "textual>=0.47.0",
    "pyserial>=3.5",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
evilcrow = "evilcrow_tui.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']
